Add integration tests to backend routes
