# api.yaml
@@ -216,14 +216,8 @@ paths:
                     example: "User updated successfully"
                   data:
                     $ref: "#/components/schemas/UserBasic"
-        "404":
-          description: Failure response - User not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/FailureResponse"
-        "403":
-          description: Failure response - Current user not authenticated to delete user
+        "400":
+          description: Failure response - Form field values are missing or invalid
           content:
             application/json:
               schema:
@@ -241,18 +235,6 @@ paths:
       responses: 
         "204":
           description: Success response - User deleted successfully
-        "404":
-          description: Failure response - User not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/FailureResponse"
-        "403":
-          description: Failure response - Current user not authenticated to delete user
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/FailureResponse"
         "500":
           description: Failure response - Server or database issues
           content:
